--- a/public/assets/css/servicos.css
+++ b/public/assets/css/servicos.css
@@ -180,135 +180,135 @@ main{
     z-index: 0;
 }
 
-.servicos .corte_cabelo h1{
-    font-family: "GrandParadiso-Regular", sans-serif;
-    color: white;
-    margin-left: 125px;
-    margin-top: 280px;
-    font-size: 40px;
-    position: absolute;
-    z-index: 2;
+.servicos .corte_cabelo h1{ /*Esta é a parte de serviços do corte de cabelo do h1*/
+    font-family: "GrandParadiso-Regular", sans-serif; /*Defini a fonte do texto do h1*/
+    color: white; /*Cores da fonte do h1*/
+    margin-left: 125px;/*Margem a esquerda do h1*/
+    margin-top: 280px;/*Margem superior do h1*/
+    font-size: 40px;/*Tamanho da fonte do texto do h1*/
+    position: absolute;/*Posicionamento da pagina do h1*/
+    z-index: 2;/*Esta e a sobreposicao dos elementos no h1*/
 }
 
-.servicos .corte_cabelo p{
-    font-family: "GrandParadiso-Regular", sans-serif;
-    color: white;
-    margin-left: 125px;
-    margin-top: 310px;
-    font-size: 35px;
-    position: absolute;
-    z-index: 2;
+.servicos .corte_cabelo p{ /*Esta é a parte de serviços do paragrafo*/
+    font-family: "GrandParadiso-Regular", sans-serif;/*Defini a fonte do texto dos servicoes de corte de cabelo do paragrafo*/
+    color: white;/*Cores da fonte do paragrafo*/
+    margin-left: 125px;/*Margem a esquerda do paragrafo*/
+    margin-top: 310px;/*Margem superior do paragrafo*/
+    font-size: 35px;/*Tamanho da fonte do texto do paragrafo*/
+    position: absolute;/*Posicionamento da pagina do paragrafo*/
+    z-index: 2;/*Esta e a sobreposicao dos elementos no paragrafo*/
 }
 
-.servicos .corte_cabelo button{
-    position: absolute;
-    z-index: 2;
-    font-size: 25px;
-    border-radius: 25px;
-    background-color: rgb(220, 220, 220);
-    padding: 16px 32px;
-    margin-left: 125px;
-    margin-top: 380px;
+.servicos .corte_cabelo button{ /*Esta é a parte de serviços do corte de cabelo que esta no button*/
+    position: absolute;/*Posicionamento da pagina de servicos do corte de cabelo do button*/
+    z-index: 2;/*Esta e a sobreposicao dos elementos no button*/
+    font-size: 25px;/*Tamanho da fonte do texto do button*/
+    border-radius: 25px;/*Div para arredondar os cantos dos elementos do button */
+    background-color: rgb(220, 220, 220);/*Cores de fundo do button*/
+    padding: 16px 32px;/*Espaco entre a borda e o elemento do button*/
+    margin-left: 125px;/*Margem a esquerda do button*/
+    margin-top: 380px;/*Distancia da margem ao topo dos elementos do button*/
 }
 
-.servicos .corte_cabelo button:hover{
-    background-color: #2c2a2a;
-    color: white;
+.servicos .corte_cabelo button:hover{ /*Esta é a parte de serviços do corte de cabelo que esta no button:hover*/
+    background-color: #2c2a2a;/*Cores de fundo no button:hover*/
+    color: white;/*Cores da fonte*/
 }
 
-.servicos .corte_barba .logo_white {
-    position: absolute;
-    height: 125px;
-    margin-left: 125px;
-    width: 100px;
-    z-index: 1;
+.servicos .corte_barba .logo_white {/*Esta é a parte de serviços do corte de barba que esta no logo_white*/
+    position: absolute;/*Posicionamento da pagina do logo_white*/
+    height: 125px;/*Altura do elemento na logo_white*/
+    margin-left: 125px;/*Tamanho da margem a esquerda*/
+    width: 100px;/*Largura do elemento*/
+    z-index: 1;/*Esta e a sobreposicao dos elementos no logo_white*/
 }
 
-.servicos .corte_barba .pattern{
-    position: absolute;
-    margin-left: 100px;
-    height: 500px;
-    width: 350px;
-    border-radius: 20px;
-    z-index: 0;
+.servicos .corte_barba .pattern{/*Esta é a parte de serviços do corte de barba do pattern*/
+    position: absolute;/*Posicionamento da pagina do pattern*/
+    margin-left: 100px;/*Tamanho da margem para a esquerda*/
+    height: 500px;/*Altura do elemento no pattern*/
+    width: 350px;/*Largura do elemento*/
+    border-radius: 20px;/*Div para arredondar os cantos dos elementos do pattern*/
+    z-index: 0;/*Esta e a sobreposicao dos elementos no pattern*/
 }
 
-.servicos .corte_barba h1{
-    font-family: "GrandParadiso-Regular", sans-serif;
-    color: white;
-    margin-left: 125px;
-    margin-top: 280px;
-    font-size: 40px;
-    position: absolute;
-    z-index: 2;
+.servicos .corte_barba h1{/**/
+    font-family: "GrandParadiso-Regular", sans-serif;/**/
+    color: white;/**/
+    margin-left: 125px;/**/
+    margin-top: 280px;/**/
+    font-size: 40px;/**/
+    position: absolute;/*Posicionamento da pagina do paragrafo*/
+    z-index: 2;/*Esta e a sobreposicao dos elementos no paragrafo*/
 }
 
-.servicos .corte_barba p{
-    font-family: "GrandParadiso-Regular", sans-serif;
-    color: white;
-    margin-left: 125px;
-    margin-top: 310px;
-    font-size: 35px;
-    position: absolute;
-    z-index: 2;
+.servicos .corte_barba p{/**/
+    font-family: "GrandParadiso-Regular", sans-serif;/**/
+    color: white;/**/
+    margin-left: 125px;/**/
+    margin-top: 310px;/**/
+    font-size: 35px;/**/
+    position: absolute;/*Posicionamento da pagina do paragrafo*/
+    z-index: 2;/*Esta e a sobreposicao dos elementos no paragrafo*/
 }
 
-.servicos .corte_barba button{
-    position: absolute;
-    z-index: 2;
-    font-size: 25px;
-    border-radius: 25px;
-    background-color: rgb(220, 220, 220);
-    padding: 16px 32px;
-    margin-left: 125px;
-    margin-top: 380px;
+.servicos .corte_barba button{/**/
+    position: absolute;/*Posicionamento da pagina do paragrafo*/
+    z-index: 2;/*Esta e a sobreposicao dos elementos no paragrafo*/
+    font-size: 25px;/**/
+    border-radius: 25px;/**/
+    background-color: rgb(220, 220, 220);/**/
+    padding: 16px 32px;/**/
+    margin-left: 125px;/**/
+    margin-top: 380px;/**/
 }
 
-.servicos .corte_barba button:hover{
-    background-color: #2c2a2a;
-    color: white;
+.servicos .corte_barba button:hover{/**/
+    background-color: #2c2a2a;/**/
+    color: white;/**/
 }
 
-.servicos .quimicas .logo_white {
-    position: absolute;
-    height: 125px;
-    margin-left: 125px;
-    width: 100px;
-    z-index: 1;
+.servicos .quimicas .logo_white {/**/
+    position: absolute;/**/
+    height: 125px;/*Posicionamento da pagina do paragrafo*/
+    margin-left: 125px;/**/
+    width: 100px;/**/
+    z-index: 1;/*Esta e a sobreposicao dos elementos no paragrafo*/
 }
 
-.servicos .quimicas .pattern{
-    position: absolute;
-    margin-left: 100px;
-    height: 500px;
-    width: 350px;
-    border-radius: 20px;
-    z-index: 0;
+.servicos .quimicas .pattern{/**/
+    position: absolute;/*Posicionamento da pagina do paragrafo*/
+    margin-left: 100px;/**/
+    height: 500px;/**/
+    width: 350px;/**/
+    border-radius: 20px;/**/
+    z-index: 0;/*Esta e a sobreposicao dos elementos no paragrafo*/
 }
 
-.servicos .quimicas h1{
-    font-family: "GrandParadiso-Regular", sans-serif;
-    color: white;
-    margin-left: 125px;
-    margin-top: 280px;
-    font-size: 40px;
-    position: absolute;
-    z-index: 2;
+.servicos .quimicas h1{/**/
+    font-family: "GrandParadiso-Regular", sans-serif;/**/
+    color: white;/**/
+    margin-left: 125px;/**/
+    margin-top: 280px;/**/
+    font-size: 40px;/**/
+    position: absolute;/*Posicionamento da pagina do h1*/
+    z-index: 2;/*Esta e a sobreposicao dos elementos no h1*/
 }
 
-.servicos .quimicas p{
-    font-family: "GrandParadiso-Regular", sans-serif;
-    color: white;
-    margin-left: 125px;
-    margin-top: 310px;
-    font-size: 35px;
-    position: absolute;
-    z-index: 2;
+.servicos .quimicas p{/**/
+    font-family: "GrandParadiso-Regular", sans-serif;/**/
+    color: white;/**/
+    margin-left: 125px;/**/
+    margin-top: 310px;/**/
+    font-size: 35px;/**/
+    position: absolute;/*Posicionamento da pagina de produtos quimicos do paragrafo*/
+    z-index: 2;/*Esta e a sobreposicao dos elementos dos profutos quimicos no paragrafo*/
 }
 
 .servicos .quimicas button{
-    position: absolute;
-    z-index: 2;
+    position: absolute;/*Posicionamento da pagina do paragrafo*/
+    z-index: 2;/*Esta e a sobreposicao dos elementos no paragrafo*/
     font-size: 25px;
     border-radius: 25px;
     background-color: rgb(220, 220, 220);
@@ -323,20 +323,20 @@ main{
 }
 
 .servicos .sombrancelha .logo_white {
-    position: absolute;
+    position: absolute;/*Posicionamento da pagina do paragrafo*/
     height: 125px;
     margin-left: 125px;
     width: 100px;
-    z-index: 1;
+    z-index: 1;/*Esta e a sobreposicao dos elementos no paragrafo*/
 }
 
 .servicos .sombrancelha .pattern{
-    position: absolute;
+    position: absolute;/*Posicionamento da pagina do paragrafo*/
     margin-left: 100px;
     height: 500px;
     width: 350px;
     border-radius: 20px;
-    z-index: 0;
+    z-index: 0;/*Esta e a sobreposicao dos elementos no paragrafo*/
 }
 
 .servicos .sombrancelha h1{
@@ -345,8 +345,8 @@ main{
     margin-left: 125px;
     margin-top: 280px;
     font-size: 40px;
-    position: absolute;
-    z-index: 2;
+    position: absolute;/*Posicionamento da pagina do paragrafo*/
+    z-index: 2;/*Esta e a sobreposicao dos elementos no paragrafo*/
 }
 
 .servicos .sombrancelha p{
@@ -355,13 +355,13 @@ main{
     margin-left: 125px;
     margin-top: 310px;
     font-size: 35px;
-    position: absolute;
-    z-index: 2;
+    position: absolute;/*Posicionamento da pagina do paragrafo*/
+    z-index: 2;/*Esta e a sobreposicao dos elementos no paragrafo*/
 }
 
 .servicos .sombrancelha button{
-    position: absolute;
-    z-index: 2;
+    position: absolute;/*Posicionamento da pagina de sombrancelhas do button*/
+    z-index: 2;/*Esta e a sobreposicao dos elementos da sombrancelhas do button*/
     font-size: 25px;
     border-radius: 25px;
     background-color: rgb(220, 220, 220);
@@ -480,7 +480,7 @@ footer{
     border: 0;
   }
   .voltar-topo {
-    position: fixed;
+    position: fixed;/*Posicionamento da pagina do paragrafo*/
     bottom: 20px;
     right: 20px;
     background-color: rgb(100, 100, 100);
