--- a/public/assets/css/feedback.css
+++ b/public/assets/css/feedback.css
@@ -245,7 +245,7 @@ main{
 
 .box_avaliacao button:hover{
     background-color: #2c2a2a;
-    color: white;
+    color: white; /*Cor*/
 }
 
 /*Classe voltar-topo*/
